--- a/Apps/Sandcastle/gallery/3D Tiles - Vector Tiles.html
+++ b/Apps/Sandcastle/gallery/3D Tiles - Vector Tiles.html
@@ -48,13 +48,11 @@ viewer.terrainProvider = cesiumTerrainProviderMeshes;
 viewer.scene.globe.depthTestAgainstTerrain = true;
 
 var tileset = scene.primitives.add(new Cesium.Cesium3DTileset({
-    url : 'http://localhost:8002/tilesets/corridors/',
-    debugShowStatistics : true
+    url : 'http://localhost:8002/tilesets/corridors/'
 }));
 
 scene.primitives.add(new Cesium.Cesium3DTileset({
-    url : 'http://localhost:8003/localTilesets/philadelphia/PhiladelphiaHiResRealityModel.json',
-    debugShowStatistics : true
+    url : 'http://localhost:8003/localTilesets/philadelphia/PhiladelphiaHiResRealityModel.json'
 }));
 
 tileset.readyPromise.then(function(tileset) {
@@ -65,7 +63,6 @@ tileset.readyPromise.then(function(tileset) {
     tileset.style = new Cesium.Cesium3DTileStyle({
         "color" : {
             "conditions" : [
-                ["${BEZ} == 23", "color('red')"],
                 ["true", "color('cyan', 0.5)"]
             ]
         }
@@ -75,80 +72,12 @@ tileset.readyPromise.then(function(tileset) {
 var handler = new Cesium.ScreenSpaceEventHandler(scene.canvas);
 
 var pickingEnabled = true;
-var flags = {
-    // Mouse
-    leftDown : false,
-    middleDown : false,
-    rightDown : false
-};
-
-handler.setInputAction(function(movement) {
-    flags.leftDown = true;
-}, Cesium.ScreenSpaceEventType.LEFT_DOWN);
-
-handler.setInputAction(function(movement) {
-    flags.middleDown = true;
-}, Cesium.ScreenSpaceEventType.MIDDLE_DOWN);
-
-handler.setInputAction(function(movement) {
-    flags.rightDown = true;
-}, Cesium.ScreenSpaceEventType.RIGHT_DOWN);
-
-handler.setInputAction(function(movement) {
-    flags.leftDown = false;
-}, Cesium.ScreenSpaceEventType.LEFT_UP);
-
-handler.setInputAction(function(movement) {
-    flags.middleDown = false;
-}, Cesium.ScreenSpaceEventType.MIDDLE_UP);
-
-handler.setInputAction(function(movement) {
-    flags.rightDown = false;
-}, Cesium.ScreenSpaceEventType.RIGHT_UP);
-
-var current = {
-    feature : undefined,
-    originalColor : new Cesium.Color()
-};
-
-var HIGHLIGHT_COLOR = new Cesium.Color(1.0, 1.0, 0.0, 0.4);
-
-// Highlight feature on mouse over
 handler.setInputAction(function(movement) {
     if (!pickingEnabled) {
         return;
     }
 
-    if (flags.leftDown || flags.middleDown || flags.rightDown) {
-        // Don't highlight when panning and zooming
-        return;
-    }
-
-    var pickedFeature = scene.pick(movement.endPosition);
-
-    if (Cesium.defined(current.feature) && (current.feature !== pickedFeature)) {
-        // Restore original color to feature that is no longer selected
-
-        // This assignment is necessary to work with the set property
-        current.feature.color = Cesium.Color.clone(current.originalColor, current.feature.color);
-        current.feature = undefined;
-    }
-
-    if (Cesium.defined(pickedFeature) && (pickedFeature !== current.feature)) {
-        current.feature = pickedFeature;
-        Cesium.Color.clone(pickedFeature.color, current.originalColor);
-
-        // Highlight newly selected feature
-        pickedFeature.color = Cesium.Color.clone(HIGHLIGHT_COLOR, pickedFeature.color);
-    }
-}, Cesium.ScreenSpaceEventType.MOUSE_MOVE);
-
-handler.setInputAction(function(movement) {
-    if (!pickingEnabled) {
-        return;
-    }
-
-    var feature = current.feature;
+    var feature = scene.pick(movement.endPosition);
     if (Cesium.defined(feature)) {
         if (feature.getProperty('clicked')) {
             console.log('already clicked');
