--- a/Apps/Sandcastle/gallery/3D Tiles - Vector Tiles.html
+++ b/Apps/Sandcastle/gallery/3D Tiles - Vector Tiles.html
@@ -30,8 +30,7 @@ function startup(Cesium) {
 //Sandcastle_Begin
 
 var viewer = new Cesium.Viewer('cesiumContainer', {
-    scene3DOnly : true,
-    shadows : true
+    scene3DOnly : true
 });
 
 var scene = viewer.scene;
@@ -39,92 +38,73 @@ scene.fog.enabled = false;
 scene.debugShowFramesPerSecond = true;
 
 var cesiumTerrainProviderMeshes = new Cesium.CesiumTerrainProvider({
-    url : 'https://assets.agi.com/stk-terrain/world',
-    requestWaterMask : true,
-    requestVertexNormals : true
+    url : 'https://assets.agi.com/stk-terrain/world'
 });
 viewer.terrainProvider = cesiumTerrainProviderMeshes;
 
 viewer.scene.globe.depthTestAgainstTerrain = true;
 
-var tileset = scene.primitives.add(new Cesium.Cesium3DTileset({
+var corridorTileset = scene.primitives.add(new Cesium.Cesium3DTileset({
     url : 'http://localhost:8002/tilesets/corridors/'
 }));
+corridorTileset.show = false;
 
-scene.primitives.add(new Cesium.Cesium3DTileset({
+Cesium.Math.setRandomNumberSeed(15);
+
+var conditions = [];
+for (var i = 0; i < 274; ++i) {
+    var c = Cesium.Color.fromRandom();
+    conditions.push(["${OBJECTID} == " + i, "rgba(" + Math.floor(c.red * 255.0) + ", " + Math.floor(c.green * 255.0) + ", " + Math.floor(c.blue * 255.0) + ", 0.5)"]);
+}
+conditions.push(["true", "rgba(255, 0, 255, 0.5)"]);
+
+corridorTileset.style = new Cesium.Cesium3DTileStyle({
+    "color" : {
+        "conditions" : conditions
+    }
+});
+
+var censusTileset = scene.primitives.add(new Cesium.Cesium3DTileset({
+    url : 'http://localhost:8002/tilesets/census/'
+}));
+censusTileset.show = false;
+
+censusTileset.style = new Cesium.Cesium3DTileStyle({
+    "color" : "color('${FEATURE_COLOR}', 0.5)"
+});
+
+var cityTileset = scene.primitives.add(new Cesium.Cesium3DTileset({
     url : 'http://localhost:8003/localTilesets/philadelphia/PhiladelphiaHiResRealityModel.json'
 }));
 
-tileset.readyPromise.then(function(tileset) {
-    var boundingSphere = tileset.boundingSphere;
+cityTileset.readyPromise.then(function(tileset) {
+    var boundingSphere = cityTileset.boundingSphere;
     viewer.camera.viewBoundingSphere(boundingSphere, new Cesium.HeadingPitchRange(0, -2.0, 0));
     viewer.camera.lookAtTransform(Cesium.Matrix4.IDENTITY);
-
-    tileset.style = new Cesium.Cesium3DTileStyle({
-        "color" : {
-            "conditions" : [
-                ["true", "color('cyan', 0.5)"]
-            ]
-        }
-    });
 });
 
 var handler = new Cesium.ScreenSpaceEventHandler(scene.canvas);
-
-var pickingEnabled = true;
 handler.setInputAction(function(movement) {
-    if (!pickingEnabled) {
-        return;
-    }
-
-    var feature = scene.pick(movement.endPosition);
-    if (Cesium.defined(feature)) {
-        if (feature.getProperty('clicked')) {
-            console.log('already clicked');
-        } else {
+    var features = scene.drillPick(movement.position);
+    if (Cesium.defined(features)) {
+        for (var j = 0; j < features.length; ++j) {
+            var feature = features[j];
             var properties = feature.getPropertyNames();
             for (var i = 0; i < properties.length; ++i) {
-                var name = properties[i];
-                console.log(name + ': ' + feature.getProperty(name));
-            }
-
-            feature.setProperty('clicked', true);
+	        var name = properties[i];
+	        console.log(name + ': ' + feature.getProperty(name));
+	    }
+	    feature.setProperty('clicked', true);
         }
     }
 }, Cesium.ScreenSpaceEventType.LEFT_CLICK);
-
-///////////////////////////////////////////////////////////////////////////////
-
-Sandcastle.addToolbarButton('Stats on/off', function() {
-    tileset.debugShowStatistics = !tileset.debugShowStatistics;
+		    
+Sandcastle.addToolbarButton('Toggle Show Business Corridors', function() {
+    corridorTileset.show = !corridorTileset.show;
 });
 
-Sandcastle.addToolbarButton('Pick stats on/off', function() {
-    tileset.debugShowPickStatistics = !tileset.debugShowPickStatistics;
-});
-
-Sandcastle.addToolbarButton('Freeze on/off', function() {
-    tileset.debugFreezeFrame = !tileset.debugFreezeFrame;
-});
-
-Sandcastle.addToolbarButton('Colorize on/off', function() {
-    tileset.debugColorizeTiles = !tileset.debugColorizeTiles;
-});
-
-Sandcastle.addToolbarButton('BV on/off', function() {
-    tileset.debugShowBoundingVolume = !tileset.debugShowBoundingVolume;
-});
-
-Sandcastle.addToolbarButton('Contents BV on/off', function() {
-    tileset.debugShowContentBoundingVolume = !tileset.debugShowContentBoundingVolume;
-});
-
-Sandcastle.addToolbarButton('Request Volume on/off', function() {
-    tileset.debugShowViewerRequestVolume = !tileset.debugShowViewerRequestVolume;
-});
-
-Sandcastle.addToolbarButton('Picking on/off', function() {
-    pickingEnabled = !pickingEnabled;
+Sandcastle.addToolbarButton('Toggle Show Census Data', function() {
+    censusTileset.show = !censusTileset.show;
 });
 
 ///////////////////////////////////////////////////////////////////////////////
